--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FGAPool">
         <activity
-            android:name=".BottomNavigation"
-            android:exported="true"
-            android:label="@string/title_activity_bottom_navigation" />
-        <activity
-            android:name=".GoogleAuthLogin"
+            android:name=".CompleteRegistration"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,8 +19,16 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".BottomNavigation"
+            android:exported="true"
+            android:label="@string/title_activity_bottom_navigation" />
+        <activity
+            android:name=".GoogleAuthLogin"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
