--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_gama"
+        android:icon="@mipmap/ic_launcher_gama"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_gama_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FGAPool">
         <activity
