--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the "MyLocation" functionality.
     -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_gama"
@@ -15,7 +12,14 @@
         android:roundIcon="@mipmap/ic_launcher_gama_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FGAPool">
-
+        <activity
+            android:name=".EditRideActivity"
+            android:theme="@style/Theme.FGAPool.NoActionBar"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -45,7 +49,7 @@
         <activity
             android:name=".OfferRide"
             android:exported="true"
-            android:theme="@style/Theme.FGAPool.NoActionBar"/>
+            android:theme="@style/Theme.FGAPool.NoActionBar" />
         <activity
             android:name=".CompleteRegistration"
             android:exported="true"
@@ -57,11 +61,11 @@
         <activity
             android:name=".GoogleAuthLogin"
             android:exported="true"
-            android:theme="@style/Theme.FGAPool.NoActionBar"/>
+            android:theme="@style/Theme.FGAPool.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.FGAPool.NoActionBar"/>
+            android:theme="@style/Theme.FGAPool.NoActionBar" />
     </application>
 
 </manifest>
